[tool.poetry]
name = "typer-poetry-example"
version = "0.1.0"
description = ""
authors = ["Roy Millan <millan.rodrigo201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.22"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
